Novas correções aplicadas e robustez do .log